# Score_Management_BE-

./: pyproject.toml  pytest.ini
app/: main.py
app/api/: api.py
app/db/: base.py  session.py
