[tool.poetry]
name = "score management"
version = "0.1.0"
description = ""
authors = ["Bhuvith Kulal <bhuvithg6701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
tasks = { start = "uvicorn app.main:app --reload" }

[tool.pytest.ini_options]
maxfail = 1
disable_warnings = true